--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.2",
+    "apexcharts": "^3.49.1",
+    "chart.js": "^4.4.2",
     "express": "^4.18.2",
+    "ng-apexcharts": "^1.10.0",
+    "ng2-charts": "^6.0.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.14.1",
     "rxjs": "~7.8.0",
